# iot-server

./: .gitignore  Cargo.toml  Rocket.toml
migrations/2023-08-03-013935_create_user/: down.sql  up.sql
src/: database.rs  main.rs  schema.rs
src/database/: requests.rs  responses.rs
templates/: index.html.hbs  login.html.hbs  register.html.hbs
