[package]
name = "iot-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] } 
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"] }
rust-argon2 = "1.0.0"
serde = { version = "1.0.174", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"] }
